# admissible-transition-lab

./: README.md  pyproject.toml
docs/: theory.md
milestones/: 2026-03-20_map-entry-v1.0.md
src/: demo.py  kernel.py  transition.py
tests/: test_admissibility.py  test_drift.py
web/: app.js  index.html  style.css
